--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -6,23 +6,21 @@
 %\texorpdfstring{$sigma$}{sigma}
 
 %% Subtitle (Optional)
-\subtitle{Research Plan}
 
 %% The full name of the author
-\author{Kallia Chronaki\\ kallia.chronaki@bsc.es\\ Supervisors : Marc Casas and Rosa M. Badia}
+\author{Kallia Chronaki}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
 \dept{Department of Computer Architecture}
 
 %% University and Crest
-\university{Universitat Polit\`{e}cnica de Catalunya \\
-Barcelona Supercomputing Center (BSC)}
+\university{Universitat Polit\`{e}cnica de Catalunya}
 \crest{\includegraphics[width=0.25\textwidth]{upc_logo2.jpg}}
 
 %% You can redefine the submission text:
 % Default as per the University guidelines: This dissertation is submitted for
 % the degree of Doctor of Philosophy
-\renewcommand{\submissiontext}{Research plan for}
+\renewcommand{\submissiontext}{This dissertation is submitted for the degree of}
 
 %% Full title of the Degree
 \degree{Doctor of Philosophy}
