--- a/thesis.tex
+++ b/thesis.tex
@@ -100,8 +100,8 @@
 % the document class.
 
 \ifdefineAbstract
- \pagestyle{empty}
- \includeonly{Declaration/declaration, Abstract/abstract}
+ %\pagestyle{empty}
+ \input{Abstract/abstract}
 \fi
 
 % ***************************** Chapter Mode ***********************************
@@ -124,16 +124,16 @@
 \maketitle
 
 \end{titlepage}
-
-%\include{Dedication/dedication}
-%\include{Declaration/declaration}
+\input{blankpage2}
+\include{Dedication/dedication}
+\include{Declaration/declaration}
 %\include{Acknowledgement/acknowledgement}
-%\include{Abstract/abstract}
-
+\include{Abstract/abstract}
+\input{blankpage2}
+\input{advisors/advisors}
+\input{blankpage2}
 % *********************** Adding TOC and List of Figures ***********************
-
 \tableofcontents
-
 \listoffigures
 
 %\listoftables
