--- a/thesis.tex
+++ b/thesis.tex
@@ -146,16 +146,22 @@
 \mainmatter
 
 %\include{Chapter1/chapter1}
-\part{Prologue}
 \include{introduction}
-\include{related}
+\include{background}
 %\include{Chapter2/chapter2}
 %\include{Chapter3/chapter3}
 %\include{Chapter4/chapter4}
-\part{Plan}
+\include{bigLittlePARSEC/paper}
 \include{plan}
 \include{methodology}
+\part{Scheduling Solutions for Asymmetric Systems}
+\include{RTScheduling}
+\part{Accelerating Runtime Overheads}
+
+
+
 \part{Epilogue}
+\include{related}
 \include{conclusion}
 %\include{Chapter5/chapter5}
 %\include{Chapter6/chapter6}
