--- a/thesis.tex
+++ b/thesis.tex
@@ -144,28 +144,32 @@
 
 % ******************************** Main Matter *********************************
 \mainmatter
-
-%\include{Chapter1/chapter1}
+%\chapter{Introduction}
 \include{introduction}
+
+%\chapter{Background}
 \include{background}
-%\include{Chapter2/chapter2}
-%\include{Chapter3/chapter3}
-%\include{Chapter4/chapter4}
-\include{bigLittlePARSEC/paper}
-\include{plan}
-\include{methodology}
-\part{Scheduling Solutions for Asymmetric Systems}
-\include{RTScheduling}
-\part{Accelerating Runtime Overheads}
 
+%\chapter{Study of Asymmetric Systems}
+\include{bigLittlePARSEC/paperPARSEC}
 
+\chapter{Task-based Scheduling Solutions}
+\include{scheduling/paper}
 
-\part{Epilogue}
+\chapter{Runtime Overheads Migration}
+\include{TaskGenX/paperTaskGenX}
+
+\chapter{Real-Time Scheduling}
+\include{internship}
+
+\chapter{Related Work}
 \include{related}
+
+\chapter{Conclusions}
 \include{conclusion}
-%\include{Chapter5/chapter5}
-%\include{Chapter6/chapter6}
-%\include{Chapter7/chapter7}
+
+\chapter{Future Directions}
+\include{future}
 
 
 
