--- a/TaskGenX/paperTaskGenX.tex
+++ b/TaskGenX/paperTaskGenX.tex
@@ -1,46 +1,48 @@
+\newcommand{\proposal}{TaskGenX}
+
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 \label{sec:intro}
-\input{01-introduction}
+\input{TaskGenX/01-introduction}
 
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
-\section{The ARM big.LITTLE Architecture}
-\label{sec:background}\label{sec:suitability}
-\input{02-background}
+\section{Background and Motivation}
+\label{sec:background}
+\input{TaskGenX/02-background}
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
-\section{Scheduling in Asymmetric Multi-Cores}
-\label{sec:scheduling}
-\input{03-scheduling}
+\section{Task Generation Express}
+\label{sec:ram}
+\input{TaskGenX/03-our_work}
 
+%\section{Hardware requirements}}
+%\label{sec:hw}
+\input{TaskGenX/hw}
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 \section{Experimental Methodology}
 \label{sec:experimental}
-\input{04-experimental}
+\input{TaskGenX/04-experimental}
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 \section{Evaluation}
 \label{sec:evaluation}
-\input{05-evaluation}
+\input{TaskGenX/05-evaluation}
 
 %%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%
 \section{Related Work}
 \label{sec:related}
-\input{06-related}
+\input{TaskGenX/06-related}
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
 \label{sec:conclusions}
-\input{07-conclusions}
+\input{TaskGenX/07-conclusions}
 
-\bibliographystyle{elsarticle-num} 
-\section*{References}
-\bibliography{references}
