--- a/related.tex
+++ b/related.tex
@@ -1,4 +1,4 @@
-\chapter{State of the Art and Related Work}
+\chapter{Related Work}
 
 There has been a lot of studies on asymmetric multi-core systems. Some works focus on the design of the system, while other works explore the challenges that appear in efficiently utilizing such a heterogeneous system.
 Kumar et al~\cite{Kumar_micro_2003} present the idea of an asymmetric multi-core system and proposed a feedback-based way to dynamically migrate processes among the different cores. 
