--- a/thesis.tex
+++ b/thesis.tex
@@ -153,19 +153,19 @@
 %\chapter{Study of Asymmetric Systems}
 \include{bigLittlePARSEC/paperPARSEC}
 
-\chapter{Task-based Scheduling Solutions}
-\include{scheduling/paper}
+%\chapter{Task-based Scheduling Solutions}
+\include{scheduling/paperScheduling}
 
-\chapter{Runtime Overheads Migration}
+%\chapter{Runtime Overheads Migration}
 \include{TaskGenX/paperTaskGenX}
 
-\chapter{Real-Time Scheduling}
+%\chapter{Real-Time Scheduling}
 \include{internship}
 
-\chapter{Related Work}
+%\chapter{Related Work}
 \include{related}
 
-\chapter{Conclusions}
+%\chapter{Conclusions}
 \include{conclusion}
 
 \chapter{Future Directions}
