--- a/References/references.bib
+++ b/References/references.bib
@@ -854,3 +854,272 @@ title={Characterization and bottleneck analysis of a 64-bit ARMv8 platform},
 year={2016}, 
 pages={36-45}, 
 }
+
+@INPROCEEDINGS{TaskSS, 
+author={Y. Etsion and F. Cabarcas and A. Rico and A. Ramirez and R. M. Badia and E. Ayguade and J. Labarta and M. Valero}, 
+booktitle={MICRO}, 
+title={Task Superscalar: An Out-of-Order Task Pipeline}, 
+year={2010}, 
+pages={89-100}, 
+}
+
+@INPROCEEDINGS{Xubin, 
+author={X. Tan and J. Bosch and M. Vidal and C. Álvarez and D. Jiménez-González and E. Ayguadé and M. Valero}, 
+booktitle={IPDPS}, 
+title={General Purpose Task-Dependence Management Hardware for Task-Based Dataflow Programming Models}, 
+year={2017}, 
+pages={244-253}, 
+}
+
+@INPROCEEDINGS{Nexus, 
+author={T. Dallou and N. Engelhardt and A. Elhossini and B. Juurlink}, 
+booktitle={IPDPS}, 
+title={Nexus\#: A Distributed Hardware Task Manager for Task-Based Programming Models}, 
+year={2015}, 
+pages={1129-1138}, 
+}
+
+
+@INPROCEEDINGS{Swarm, 
+author={M. C. Jeffrey and S. Subramanian and C. Yan and J. Emer and D. Sanchez}, 
+booktitle={MICRO}, 
+title={A scalable architecture for ordered parallelism}, 
+year={2015}, 
+pages={228-241}, 
+}
+
+@INPROCEEDINGS{TMU, 
+author={M. Själander and A. Terechko and M. Duranton}, 
+booktitle={2008 11th EUROMICRO Conference on Digital System Design Architectures, Methods and Tools}, 
+title={A Look-Ahead Task Management Unit for Embedded Multi-Core Architectures}, 
+year={2008}, 
+pages={149-157}, 
+}
+
+@inproceedings{Carbon,
+ author = {Kumar, Sanjeev and Hughes, Christopher J. and Nguyen, Anthony},
+ title = {Carbon: Architectural Support for Fine-grained Parallelism on Chip Multiprocessors},
+ booktitle = {ISCA},
+ year = {2007},
+ location = {San Diego, California, USA},
+ pages = {162--173},
+} 
+
+@Inbook{Casas2015,
+author="Casas, Marc
+and Moreto, Miquel
+and Alvarez, Lluc
+and Castillo, Emilio
+and Chasapis, Dimitrios
+and Hayes, Timothy
+and Jaulmes, Luc
+and Palomar, Oscar
+and Unsal, Osman
+and Cristal, Adrian
+and Ayguade, Eduard
+and Labarta, Jesus
+and Valero, Mateo",
+editor="Tr{\"a}ff, Jesper Larsson
+and Hunold, Sascha
+and Versaci, Francesco",
+title="Runtime-Aware Architectures",
+bookTitle="Euro-Par 2015: Parallel Processing: 21st International Conference on Parallel and Distributed Computing, Vienna, Austria, August 24-28, 2015, Proceedings",
+year="2015",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="16--27",
+isbn="978-3-662-48096-0",
+doi="10.1007/978-3-662-48096-0_2",
+url="http://dx.doi.org/10.1007/978-3-662-48096-0_2"
+}
+
+@ARTICLE{Li4, 
+author={K. Li and X. Tang and K. Li}, 
+journal={IEEE Transactions on Parallel and Distributed Systems}, 
+title={Energy-Efficient Stochastic Task Scheduling on Heterogeneous Computing Systems}, 
+year={2014}, 
+volume={25}, 
+number={11}, 
+pages={2867-2876}, 
+doi={10.1109/TPDS.2013.270}, 
+ISSN={1045-9219}, 
+}
+
+@article{Judit, 
+author={Planas, J. and Badia, R.M. and Ayguade, E. and Labarta, J.}, 
+booktitle={Parallel Distributed Processing (IPDPS), 2013 IEEE 27th International Symposium on}, 
+title={{Self-Adaptive OmpSs Tasks in Heterogeneous Environments}}, 
+year={2013}, 
+pages={138-149}, 
+}
+
+@inproceedings{Sanchez:2010,
+ author = {Sanchez, Daniel and Yoo, Richard M. and Kozyrakis, Christos},
+ title = {Flexible Architectural Support for Fine-grain Scheduling},
+ booktitle = {Proceedings of the Fifteenth Edition of ASPLOS on Architectural Support for Programming Languages and Operating Systems},
+ series = {ASPLOS XV},
+ year = {2010},
+ isbn = {978-1-60558-839-1},
+ pages = {311--322},
+} 
+
+@ARTICLE{OpenMP4.0:Manual2015,
+  Title                    = {{OpenMP} Architecture Review Board: Application programming Interface 4.5},
+  Year                     = {2015},
+
+  Key                      = {OpenMP Architecture Review Board},
+  volume={}, 
+}
+
+@INPROCEEDINGS{MUSA, 
+author={T. Grass and C. Allande and A. Armejach and A. Rico and E. Ayguadé and J. Labarta and M. Valero and M. Casas and M. Moreto}, 
+booktitle={SC16}, 
+title={MUSA: A Multi-level Simulation Approach for Next-Generation HPC Machines}, 
+year={2016}, 
+volume={}, 
+number={}, 
+pages={526-537}, 
+keywords={digital simulation;parallel architectures;parallel machines;MUSA;communication network;high performance computing;microarchitectural details;multilevel simulation approach;next-generation HPC machines;system software interactions;Computational modeling;Microarchitecture;Next generation networking;Parallel processing;Programming;Runtime;System software}, 
+doi={10.1109/SC.2016.44}, 
+ISSN={}, 
+month={Nov},}
+
+@misc{nanos,
+  title = {{Nanos++}},
+  author = {{Barcelona Supercomputing Center}},
+  url ={{https://pm.bsc.es/nanox}},
+}
+
+@inproceedings{Blumofe:PPoPP1995,
+  author    = {Robert D. Blumofe and
+               Christopher F. Joerg and
+               Bradley C. Kuszmaul and
+               Charles E. Leiserson and
+               Keith H. Randall and
+               Yuli Zhou},
+  title     = {Cilk: An Efficient Multithreaded Runtime System},
+  booktitle = {PPoPP},
+  year      = {1995},
+  pages     = {207-216},
+  ee        = {http://doi.acm.org/10.1145/209936.209958},
+}
+
+@Book{Reinders2007,
+  Title                    = {Intel threading building blocks - outfitting {C++} for multi-core processor parallelism},
+  Author                   = {James Reinders},
+  Publisher                = {O'Reilly},
+  Year                     = {2007}
+}
+
+@InProceedings{Bauer2012,
+  Title                    = {Legion: Expressing Locality and Independence with Logical Regions},
+  Author                   = {Bauer, Michael and Treichler, Sean and Slaughter, Elliott and Aiken, Alex},
+  Booktitle                = {SC},
+  Year                     = {2012},
+  Pages                    = {66:1--66:11},
+}
+
+@inproceedings{Papaefstathiou2013,
+ author = {Papaefstathiou, Vassilis and Katevenis, Manolis G.H. and Nikolopoulos, Dimitrios S. and Pnevmatikatos, Dionisios},
+ title = {Prefetching and Cache Management Using Task Lifetimes},
+ booktitle = {Proceedings of the 27th International ACM Conference on International Conference on Supercomputing},
+ series = {ICS '13},
+ year = {2013},
+ isbn = {978-1-4503-2130-3},
+ location = {Eugene, Oregon, USA},
+ pages = {325--334},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2464996.2465443},
+ doi = {10.1145/2464996.2465443},
+ acmid = {2465443},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cache management, prefetching, task-based programming},
+}
+
+@inproceedings{Manivannan2014,
+  author    = {Manivannan, M and
+               Stenstr{\"o}m, P},
+  title     = {Runtime-Guided Cache Coherence Optimizations in Multi-core Architectures},
+  booktitle = {IPDPS},
+  year      = {2014},
+} 
+
+@Inbook{Chapman2007,
+author="Chapman, Barbara",
+editor="Xu, Ming
+and Zhan, Yinwei
+and Cao, Jiannong
+and Liu, Yijun",
+title="The Multicore Programming Challenge",
+bookTitle="Advanced Parallel Processing Technologies: 7th International Symposium, APPT 2007 Guangzhou, China, November 22-23, 2007 Proceedings",
+year="2007",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="3--3",
+isbn="978-3-540-76837-1",
+doi="10.1007/978-3-540-76837-1_3",
+url="http://dx.doi.org/10.1007/978-3-540-76837-1_3"
+}
+
+@inproceedings{dennard74,
+author={Dennard, R.H. and Gaensslen, F.H. and Rideout, V.L. and Bassous, E. and LeBlanc, A.R.},
+booktitle={Solid-State Circuits, IEEE Journal of},
+title="{Design of Ion-implanted MOSFET's with Very Small Physical Dimensions}",
+year={1974},
+volume={9},
+number={5},
+doi={10.1109/JSSC.1974.1050511},
+ISSN={0018-9200}
+}
+
+@article{Moschakis2015,	
+	affiliation = {Department of Informatics, Aristotle University of Thessaloniki, 54124 Thessaloniki, Greece},
+	author = {Moschakis, Ioannis A. and Karatza, Helen D.},
+	doi = {10.1016/j.simpat.2015.04.009},
+	journal = {Simulation Modelling Practice and Theory},
+	keywords = {Tabu-search; Simulated annealing; Bag-of-tasks; Multi-criteria scheduling},
+	language = {English},
+	pages = {1-25},
+	title = {A meta-heuristic optimization approach to the scheduling of bag-of-tasks applications on heterogeneous clouds with multi-level arrivals and critical jobs},
+	volume = {57},
+	year = {2015},
+}
+
+@ARTICLE{LiChemical, 
+author={Y. Xu and K. Li and L. He and L. Zhang and K. Li}, 
+journal={IEEE Transactions on Parallel and Distributed Systems}, 
+title={A Hybrid Chemical Reaction Optimization Scheme for Task Scheduling on Heterogeneous Computing Systems}, 
+year={2015}, 
+volume={26}, 
+number={12}, 
+pages={3208-3222}, 
+keywords={Gaussian processes;chemical technology;directed graphs;normal distribution;optimisation;scheduling;CRO method;DAG task;DAG-based task scheduling problem;Gaussian random walk approach;HCRO algorithm;XOR operator;chemical reaction optimization method;directed acyclic graph task;exclusive-OR operator;heterogeneous computing platform;heterogeneous computing system;hybrid CRO;hybrid chemical reaction optimization scheme;maximum Hamming distance;molecular diversity;normal distribution;optimal local candidate solution;pseudo-random shuffle approach;rotating shift method;selection strategy;task-to-processor mapping;Computational modeling;Heuristic algorithms;Processor scheduling;Program processors;Scheduling;Sociology;Statistics;Chemical reaction optimization;Hamming distance;Hybrid scheduling;Normal distribution;Pseudo random shuffle;hamming distance;hybrid scheduling;normal distribution;pseudo random shuffle}, 
+doi={10.1109/TPDS.2014.2385698}, 
+ISSN={1045-9219}, 
+}
+
+@ARTICLE{Li2, 
+author={K. Li and X. Tang and B. Veeravalli and K. Li}, 
+journal={IEEE Transactions on Computers}, 
+title={Scheduling Precedence Constrained Stochastic Tasks on Heterogeneous Cluster Systems}, 
+year={2015}, 
+volume={64}, 
+number={1}, 
+pages={191-204}, 
+keywords={directed graphs;parallel processing;scheduling;statistical distributions;SDLS algorithm;heterogeneous cluster systems;intertask communication times;parallel application;precedence constrained stochastic task;probability distribution;random variables;scheduling makespan;stochastic dynamic level scheduling;task processing times;task scheduling;Clustering algorithms;Dynamic scheduling;Heuristic algorithms;Processor scheduling;Program processors;Random variables;Stochastic processes;Directed acyclic graph;heterogeneous cluster system;parallel processing;stochastic task scheduling}, 
+doi={10.1109/TC.2013.205}, 
+ISSN={0018-9340}
+}
+
+@article{Li5,
+title = "Multi-objective scheduling of many tasks in cloud platforms ",
+journal = "Future Generation Computer Systems ",
+volume = "37",
+number = "",
+pages = "309 - 320",
+year = "2014",
+issn = "0167-739X",
+doi = "http://dx.doi.org/10.1016/j.future.2013.09.006",
+author = "Fan Zhang and Junwei Cao and Keqin Li and Samee U. Khan and Kai Hwang",
+}
