background 1st version donw

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -57,7 +57,8 @@
 %\RequirePackage[small,bf]{caption}
 
 \RequirePackage[labelsep=space,tableposition=top]{caption}
-\renewcommand{\figurename}{Fig.} %to support older versions of captions.sty
+\renewcommand{\figurename}{Figure} %to support older versions of captions.sty
+\newcommand{\kc}{\textcolor{red}{Kallia: }\textcolor{red}}
 
 
 % *************************** Graphics and figures *****************************
