--- a/bigLittlePARSEC/04-experimental.tex
+++ b/bigLittlePARSEC/04-experimental.tex
@@ -5,28 +5,21 @@
 measured performance ratio between big and little cores}
     %\vspace{-0.2cm}
 	\setlength{\tabcolsep}{3pt}
-	\begin{tabular}{|p{2cm}|p{4.7cm}|p{2.5cm}|c|c|}
+	\begin{tabular}{|p{2cm}|p{2.5cm}|c|c|}
 	\hline
-	\textbf{Benchmark} & \multicolumn{1}{|c|}{\textbf{Description}} & \multicolumn{1}{|c|}{\textbf{Input}} & \textbf{Parallelization} & \multicolumn{1}{|c|}{\textbf{Perf ratio}} \\
+	\textbf{Benchmark} & \multicolumn{1}{|c|}{\textbf{Input}} & \textbf{Parallelization} & \multicolumn{1}{|c|}{\textbf{Perf ratio}} \\
 	\hline \hline
-	blackscholes & Calculates the prices of a portfolio analytically with the Black-Scholes partial differential equation. & 10,000,000 options & data-parallel &2.18 \\ \hline
-	bodytrack & Computer vision application which tracks a 3D pose of a marker-less human body with multiple cameras through an image sequence. & 4 cameras, 261 frames, 4,000 particles, 5 annealing layers & pipeline & 4.16 \\ \hline
-	canneal & Simulated cache-aware annealing to optimize routing cost of a chip design. & 2.5 million elements, 6,000 steps & unstructured & 1.73 \\ \hline
-	dedup & Compresses a data stream with a combination of global compression and local compression in order to achieve high compression ratios. & 351 MB data & pipeline & 2.67 \\ \hline
-	facesim & Takes a model of a human face and a time sequence of muscle activation and computes a visually realistic animation of the modeled face. & 100 frames, 372,126 tetrahedra & data-parallel & 3.40 \\ \hline
-	ferret & Content-based similarity search of feature-rich data (audio, images, video, etc.) & 3,500 queries, 59,695 images database, find top 50 images & pipeline & 3.59 \\ \hline
-	fluidanimate & Extended Smoothed Particle Hydrodynamics method to simulate an 
-incompressible fluid for interactive animations. & 500 frames, 500,000 particles & 
-data-parallel & 3.32 \\ \hline
-%	freqmine & Intel RMS application which employs an array-based version of the FP-growth (Frequent Pattern-growth) method for Frequent Itemset Mining (FIMI). & 250,000 HTML documents, minimum support 11,000 & 2,231\\ \hline
-%	raytrace & Intel RMS workload which renders an animated 3D scene. & 200 frames, 1,920$\times$1,080 pixels, 10 million polygons & 13,751\\ \hline
-	streamcluster & Solves the online clustering problem. & 200K points per block, 5 block & 
-data-parallel & 3.48 \\ \hline
-	swaptions & Intel RMS workload; uses the Heath-Jarrow-Morton framework to price a portfolio of swaptions. & 128 swaptions, 1 million  simulations & data-parallel & 2.78 \\ \hline
-%	vips & VASARI Image Processing System (VIPS), which includes fundamental image processing operations. & 18,000$\times$18,000 pixels & 127,957\\ \hline
-%	x264 & H.264/AVC (Advanced Video Coding) video encoder. & 512 frames, 1,920$\times$1,080 pixels & 29,329\\ \hline 
+	blackscholes & 10,000,000 options & data-parallel &2.18 \\ \hline
+	bodytrack & 4 cameras, 261 frames, 4,000 particles, 5 annealing layers & pipeline & 4.16 \\ \hline
+	canneal & 2.5 million elements, 6,000 steps & unstructured & 1.73 \\ \hline
+	dedup & 351 MB data & pipeline & 2.67 \\ \hline
+	facesim & 100 frames, 372,126 tetrahedra & data-parallel & 3.40 \\ \hline
+	ferret & 3,500 queries, 59,695 images database, find top 50 images & pipeline & 3.59 \\ \hline
+	fluidanimate & 500 frames, 500,000 particles & data-parallel & 3.32 \\ \hline
+	streamcluster & 200K points per block, 5 block & data-parallel & 3.48 \\ \hline
+	swaptions & 128 swaptions, 1 million  simulations & data-parallel & 2.78 \\ \hline
 	\end{tabular}
-	\label{tab:parsec}
+	\label{tab:AMC.apps}
 	%\vspace{-0.3cm}
 \end{table*}
 
@@ -56,10 +49,12 @@ data-parallel & 3.48 \\ \hline
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Metrics}
-\label{sec:metrics}
+%\subsection{Metrics}
+%\label{sec:metrics}
 
-All the experiments in this paper are performed on the Hardkernel Odroid XU3 described in Section~\ref{sec:background}. To avoid machine overheating, we make use of the \texttt{cpufreq} driver to set big cores at 1.6GHz and little cores at 800MHz. 
+All the experiments in this chapter are performed on the Hardkernel Odroid XU3 described in Section~\ref{sec:background}. 
+To avoid machine overheating, we make use of the \texttt{cpufreq} driver to set big cores at 1.6GHz and little cores at 800MHz. \kc{repeating the frequencies...}
+Table~\ref{tab:AMC.apps} shows the applications used in this chapter as well as their corresponding inputs, parallelization technique and performance ration between big and little cores.
 
 %To estimate the impact of the different kinds of cores, 
 We evaluate seven configurations with different numbers of \textit{little} (L) and \textit{big} (B) cores, denoted \texttt{L+B}.
@@ -107,23 +102,8 @@ Equations~\ref{eq.energy} and~\ref{eq.edp} show the formulas for these calculati
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Applications}
-\label{sec:parsec}
-
-With the prevalence of many-core processors and the increasing relevance of application 
-domains that do not belong to the traditional HPC field, comes the need for programs 
-representative of current and future parallel workloads. 
-The PARSEC benchmark suite~\cite{PARSEC3,Bienia:PhD2011} features state-of-the-art, 
-computationally intensive algorithms and very diverse workloads from different areas of computing.
-In our experiments, we make use of the original PARSEC codes together with a task-based 
-implementation of nine benchmarks of the suite~\cite{Chasapis:TACO2016}. 
-
-Table~\ref{tab:parsec} describes the benchmarks included in the study along with their respective 
-inputs, parallelization strategy and performance ratio between big and 
-little cores per application. We are using native inputs, which are real input 
-sets for native execution, except for \texttt{dedup}, as the entire input file of 672 MB and the 
-intermediate data structures do not fit in the memory system of our platform. Instead, 
-we reduce the size of the input file to 351 MB.
+%\subsection{Applications}
+%
 
 \begin{figure}[t]%
 	\centering
